[package]
name = "navigatecl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "*"
hashbrown = "*"



# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
